# claimwatch

./: .gitignore  README.md  main.py  plan.md  pyproject.toml  requirements.txt
app/: dashboard.py
data/: parse_summary.json  summary.txt
data/claims/: claims_made.json  claims_threads.json  claims_with_resolutions.json
data/eval/: results.json  results.txt
data/parsed/: 00_2021-05-20_earnings_call_Q1.json  01_2021-06-08_esg_meeting.json  02_2021-08-19_earnings_call_Q2.json  03_2021-11-25_earnings_call_Q3.json  04_2022-02-10_earnings_call_Q4.json  05_2022-03-03_esg_meeting.json  06_2022-04-06_agm.json  07_2022-05-19_earnings_call_Q1.json  08_2022-08-24_earnings_call_Q2.json  09_2022-08-31_extraordinary_meeting.json  10_2022-11-24_earnings_call_Q3.json  11_2023-02-09_earnings_call_Q4.json  12_2023-03-02_esg_meeting.json  13_2023-03-29_agm.json  14_2023-05-11_earnings_call_Q1.json  15_2023-08-31_earnings_call_Q2.json  16_2023-11-23_earnings_call_Q3.json  17_2024-02-08_earnings_call_Q4.json  18_2024-03-08_esg_meeting.json  19_2024-04-10_agm.json  20_2024-05-16_earnings_call_Q1.json  21_2024-08-22_earnings_call_Q2.json  22_2024-11-28_earnings_call_Q3.json  23_2025-02-07_earnings_call_Q4.json  24_2025-03-06_esg_meeting.json  25_2025-04-02_agm.json  26_2025-05-20_earnings_call_Q1.json  27_2025-08-21_earnings_call_Q2.json  28_2025-11-27_earnings_call_Q3.json  (+2 more)
docs/: architecture.md  claimwatch-architecture.html  complete-system-guide.md  data-and-parsing.md  evaluation.md  improvements.md  presenting-claimwatch.md  taxonomy.md  tradeoffs.md
src/: main.py
(+135 files in other folders)
