[project]
name = "claimwatch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.37.0",
    "packaging>=26.2",
    "pandas>=2.2.0",
    "pdfplumber>=0.11.9",
    "plotly>=5.18.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "streamlit>=1.32.0",
    "weaviate-client>=4.21.0",
]
